crates/analyzer/tests/snapshots/errors__return_type_undefined.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: undefined type
  ┌─ compile_errors/return_type_undefined.fe:2:17
  │
2 │   pub fn f() -> Foo:
  │                 ^^^ `Foo` has not been defined


